package tn.sante.concours.models;

public enum Etat {
    NON_PUBLIE,
    PUBLIE,
    RESULTATS_PUBLIES
}
